--- a/app/src/main/res/layout/inbox_widget.xml
+++ b/app/src/main/res/layout/inbox_widget.xml
@@ -19,14 +19,17 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="58dp"
-        android:layout_height="58dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_margin="4dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/widget_icon"
-        app:srcCompat="@drawable/widget_icon" />
+        android:src="@mipmap/widget"
+        app:srcCompat="@mipmap/widget" />
 
     <TextView
         android:id="@+id/unreadCount"
